# De-id-manual-annotation

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ping_litellm_budget.sh  run.sh
Sample Dataset/HIPS_transcripts_from_Ruth/: 03bd2893-18e4-439b-a7d0-5000c155d7ac_annotated.json  (+26 more)
backend/: agent.py  experiment_service.py  experiments_cli.py  ground_truth_sweep.py  metrics.py  models.py  normalizer.py  pyproject.toml  repro_compare.py  server.py  span_resolution.py  taxonomy.py
backend/scripts/: eedi_qatd_import.py  evaluate_full_dialogue_redactions.py  export_phase31_shared_cascade_predictions.py  ground_truth_sweep.py  manual_eval.py  name_location_csv_import.py  qwen35_9b_generate.py  repro_compare.py  thirdspacelearning_import.py  upchieve_surrogate_v4_import.py  word_problem_heavy_surrogate_import.py  word_problem_surrogate_import.py
backend/tests/: test_agent.py  test_api.py  test_eedi_qatd_import.py  test_evaluate_full_dialogue_redactions.py  test_experiments_cli.py  test_ground_truth_sweep.py  test_metrics.py  test_name_location_csv_import.py  test_normalizer.py  test_repro_compare.py  test_span_resolution.py  test_storage_paths.py  test_taxonomy.py  test_thirdspacelearning_import.py  test_upchieve_surrogate_v4_import.py  test_word_problem_heavy_surrogate_import.py  test_word_problem_surrogate_import.py
docs/: session-sharing.md
experiments/: saga27_models3_v2.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.local.ts  vite.config.ts  viteConfig.test.ts  viteConfig.ts
frontend/src/: App.css  (+19 more)
output/: pii-experiment-report.html
(+55 files in other folders)
