[project]
name = "annotation-tool-backend"
version = "0.1.0"
description = "Local Transcript Annotation Comparator backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "litellm",
    "scikit-learn",
    "scipy",
    "python-multipart",
    "pydantic",
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
