[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "annotation-tool-backend"
version = "0.1.0"
description = "Local Transcript Annotation Comparator backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "litellm",
    "scikit-learn",
    "scipy",
    "python-multipart",
    "pydantic",
    "pytest",
    "httpx",
    "pyyaml",
    "presidio-analyzer>=2.2.361",
    "spacy>=3.8.11",
    "en-core-web-lg",
]

[project.scripts]
annotation-experiments = "experiments_cli:main"

[tool.setuptools]
py-modules = [
    "agent",
    "experiment_service",
    "experiments_cli",
    "metrics",
    "models",
    "normalizer",
    "server",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
